welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:11: error: unclosed character literal
Renvoyez l'entier 'outcome' du goûter encodé comme 0=mauvais,
                          ^teaParty:11: error: ';' expected but symbol literal found.
Renvoyez l'entier 'outcome' du goûter encodé comme 0=mauvais,
                  ^teaParty:13: error: ';' expected but integer literal found.
et les bonbons sont à 5 au moins. Cependant, si soit le thé
                      ^teaParty:15: error: ';' expected but symbol literal found.
l'autre, le goûter est excellent (2). Cependant, dans tous 
 ^teaParty:16: error: ';' expected but ',' found.
les cas, si soit le thé soit les bonbons sont à moins de 5,
       ^